final version of the project